@@ -1,6 +1,9 @@
 # $Id$
 
-2011-02-23 <fumiyas at OSS echnology, Inc. Japan>
+2011-03-09 <fumiyas at OSS Technology, Inc. Japan>
+	* smbldap_tools.pm: Use Encode instead of Unicode::MapUTF8
+
+2011-02-23 <fumiyas at OSS Technology, Inc. Japan>
 	* smbldap_tools.pm:
 	  - get_next_id: Use getgrgid() for GID number
 	  - read_parameter: Use lexically-scoped variable $line
